2009-01-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_UALLOC):  Added missing parens
	required to get correct results out of things like
	STRING_UALLOC(num + append).  [Bug 2494093].

2008-12-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c (Tcl_FSGetNormalizedPath):	Added another
	flag value TCLPATH_NEEDNORM to mark those intreps which need more
	complete normalization attention for correct results.  [Bug 2385549]

2008-12-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (TclDoGlob):	One of the 
	Tcl_FSMatchInDirectory() calls did not have its return code
	checked.  Some VFS drivers can return TCL_ERROR, and when that's
	not checked, the error message gets converted into a list of
	matching files returned by [glob], with ridiculous results.

2008-12-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Revised latest commit to
	something that doesn't crash the test suite.

2008-11-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied backport of
	  Alexandre Ferrieux's patch for [Bug 2270477] to prevent infinite
	  looping during finalization of channels not bound to
	  interpreters.

2008-08-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: Backport of fix for [Bug 2333466].

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclPort.h: remove the ../{win,unix}/ header dirs as the
	build system already has it, and it confuses builds when used with
	private headers installed.

2008-09-25  Don Porter  <dgp@users.sourceforge.net>

	* doc/global.n:	Correct false claim about [info locals].

2008-08-14  Don Porter  <dgp@users.sourceforge.net>

	* tests/fileName.test:	Revise new tests for portability to case
	insensitive filesystems.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclCompile.h:		add support for debug logging of DTrace